Usuario CRUD Inicio

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html ng-app="myApp">
 <html lang="en">
 
 <head>
@@ -19,6 +19,7 @@
 <body>
     <app-root></app-root>
 
+    
 </body>
 
 </html>
